# phishbrand_identification

./: .gitattributes  .gitignore  README.md  pyproject.toml
datasets/phish-html-en-qa/: cache-0606ca5d0c32cfae.arrow  cache-0a0df5fd94d2124e.arrow  cache-0ca5eb9cbc717cbf.arrow  cache-15adf11f6c79f955.arrow  cache-1c0c3c341c05a811.arrow  cache-28f1c6964e87f718.arrow  cache-2bf3abddcaa8402e.arrow  cache-357365d54e5f53b6.arrow  cache-434e6440e3818e33.arrow  cache-4413912ed714809c.arrow  cache-46d90a858cc107d2.arrow  cache-47750cc6f5d4c7a3.arrow  cache-4dca60d77e3a8a21.arrow  cache-4f231c7271af2b84.arrow  cache-4f8dd13860c56933.arrow  cache-53ba98a4291dd9ac.arrow  cache-56aa18cc24c69572.arrow  cache-5a92032d19498a51.arrow  cache-5bdfba90e1d50d00.arrow  cache-5cf7ca9b2fb87ad2.arrow  cache-600b3e69a2790418.arrow  cache-60516ac76fd93302.arrow  cache-6590c8f2ec0fe4bc.arrow  cache-667c05f535c6a4b2.arrow  cache-6a4bb79560a0ff75.arrow  cache-85afb7ab47707963.arrow  cache-869849cc45ac5039.arrow  cache-87f6e1594eb945f7.arrow  cache-88e1d0062e31a17e.arrow  cache-897ee56248dde1c3.arrow  cache-8c13fac02bf5cc2a.arrow  cache-90789f7b3a448f42.arrow  cache-91a7d610df2490e1.arrow  cache-94822eb443c5e1a2.arrow  cache-96b76da19b42b58d.arrow  cache-996fbd2b04ca233a.arrow  cache-9b7ad1285dadd778.arrow  cache-9e02200def34cac9.arrow  cache-9fe84c38d35377ec.arrow  cache-a010f016ca5bb19d.arrow  (+21 more)
results/: file_lengths_distribution.csv  file_lengths_stats.csv
src/: analyze_dataset.py  causal_lora_test.py  causal_lora_training.py  config.py  identification_poc.py  markuplm_qa.poc.py  model_poc.py  model_trainer.py  prepare_dataset.py  prepare_qa_dataset.py  preprocess_for_qa_dataset.py  qa.poc.py  qa_poc.py  qa_training.py  setfit_poc.py  summarization_poc.py  summarization_trained_poc.py  zeroshot_poc.py
src/analysis/: analyze_dataset.py  analyze_raw_dataset.py  analyze_result.py  plot_only_eval.py
src/causal_lora/: causal_lora_test.py  causal_lora_training.py
src/dataset_maker/: prepare_dataset.py  prepare_qa_dataset.py
src/gpt/: analyze_gpt_result.py  gpt_client.py  prompt.py
src/qa/: baseline_only_eval_brands.py  baseline_sm_test.py  preprocessor.py  processor.py  qa_poc.py  qa_test.py  qa_test_brandsplit.py  qa_test_only_eval_brands.py  qa_test_sentence_transformer.py  qa_test_sequence_matcher.py  (+2 more)
(+27 files in other folders)
