[tool.poetry]
name = "phishbrand-identification"
version = "0.1.0"
description = ""
authors = ["r-wata <ryusei.watanabe@fuji.waseda.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.33.2"
datasets = "^2.14.5"
pillow = "^10.0.1"
beautifulsoup4 = "^4.12.2"
sentence-transformers = "^2.2.2"
torch = {version = "^2.0.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.15.2+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.0.2+cu118", source = "torch_cu118"}
langdetect = "^1.0.9"
protobuf = "^4.24.3"
setfit = "^0.7.0"
matplotlib = "^3.8.0"
peft = "^0.5.0"
openai = "^1.1.1"
python-dotenv = "^1.0.0"



[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
