[tool.poetry]
name = "phishbrand-identification"
version = "0.1.0"
description = ""
authors = ["r-wata <ryusei.watanabe@fuji.waseda.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.33.2"
datasets = "^2.14.5"
pillow = "^10.0.1"
beautifulsoup4 = "^4.12.2"
sentence-transformers = "^2.2.2"
langdetect = "^1.0.9"
protobuf = "^4.24.3"
setfit = "^0.7.0"
matplotlib = "^3.8.0"
peft = "^0.5.0"
openai = "^1.1.1"
python-dotenv = "^1.0.0"
seaborn = "^0.13.1"
chardet = "^5.2.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
torch = "^2.7.0"
torchaudio = "^2.7.0"
torchvision = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
